# wohnzimmer

./: .dockerignore  .gitignore  .sops.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.toml  events.yaml  fly.toml  secrets.sops.env
.github/: CODEOWNERS  dependabot.yml  renovate.json5
.github/renovate/: groups.json5
.github/workflows/: build-image.yml  ci.yml  container.yml  deploy.yml  release.yml  renovate.yml
config/: default.toml  development.toml  production.toml
examples/: calendar-example.rs
libs/gcal-client/: Cargo.toml
libs/gcal-client/src/: lib.rs  models.rs
poc/: .env  Cargo.toml
poc/src/: main.rs
poc/src/models/: mod.rs
src/: calendar-example.rs  calendar.rs  lib.rs  main.rs  markdown.rs  metrics.rs
src/calendar/: templating.rs
src/calendar/google/: mod.rs  models.rs
src/google_calendar/: mod.rs
static/: browserconfig.xml  site.webmanifest
static/css/: style.css
templates/: error.html  events.html  imprint.html  index.html  layout.html  not_found.html
