[package]
name = "wohnzimmer"
version = "0.7.1"
publish = false
authors = ["Alhambra Luckenwalde <github@alhambra-luckenwalde.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/musikundkultur/wohnzimmer"
readme = "README.md"
edition = "2021"
exclude = [
    ".github/",
]

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
actix-utils = "3"
anyhow = "1.0.95"
async-trait = "0.1.83"
config = { version = "0.15.4", default-features = false, features = ["toml"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde", "std", "unstable-locales"] }
chrono-tz = "0.10.0"
env_logger = "0.11"
indexmap = { version = "2.7.0", features = ["serde"] }
log = "0.4"
minijinja = { version = "2.5.0", features = ["loader"] }
minijinja-autoreload = "2.5.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
serde_json = "1"
google-cloud-auth = "0.17.2"
google-cloud-token = "0.1.2"
reqwest = { version = "0.12", features = ["gzip", "json"] }
reqwest-middleware = "0.4"
http = "1.2"
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
actix-rt = "2.10.0"
dotenv = "0.15.0"
