[package]
name = "wohnzimmer"
version = "0.7.1"
publish = false
authors = ["Alhambra Luckenwalde <github@alhambra-luckenwalde.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/musikundkultur/wohnzimmer"
readme = "README.md"
edition = "2024"
exclude = [
    ".github/",
]

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
actix-utils = "3"
anyhow = "1.0.95"
async-trait = "0.1.83"
config = { version = "0.15.4", default-features = false, features = ["toml"] }
env_logger = "0.11"
indexmap = { version = "2.7.0", features = ["serde"] }
log = "0.4"
minijinja = { version = "2.5.0", features = ["loader"] }
minijinja-autoreload = "2.5.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
serde_json = "1"
gcloud-auth = "1.0.0"
gcloud-token = "1.0.0"
reqwest = { version = "0.12", features = ["gzip", "json"] }
reqwest-middleware = "0.4"
http = "1.2"
tokio = { version = "1.42.0", features = ["full"] }
jiff = { version = "0.1.16", features = ["serde"] }
actix-web-httpauth = "0.8.2"
actix-web-prom = "0.9.0"
prometheus = { version = "0.13.4", features = ["process"] }

[dev-dependencies]
actix-rt = "2.10.0"
dotenv = "0.15.0"
